--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <span></span>
             <div class="content">
                 <h2>Card One</h2>
-                <p>Selamat Merayakan <br> Hari Raya Idul Fitri 1443 <br> Hijriah <br> Feby Permatasari,</p>
+                <p>Selamat Merayakan <br> Hari Raya Idul Fitri Tahun 1443 <br> Hijriah <br> Feby Permatasari,</p>
                 <a href="#">Read More</a>
             </div>
         </div>
